--- a/src/static/stylesheet/login.css
+++ b/src/static/stylesheet/login.css
@@ -35,3 +35,36 @@
 .sid-layout_login-main-submit {
     margin-top: 36px;
 }
+
+.sid-layout_login-main-submit input {
+    font-family: "Poppins", serif;
+    font-size: 16px;
+}
+
+.sid-layout_login-dialog {
+    margin-top: -500px !important;
+    height: auto !important;
+    width: 500px !important;
+    animation: slide-in-login 1s;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.1), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
+    border: none;
+}
+
+.sid-layout_login-dialog h2 {
+    color: red;
+}
+
+.sid-layout_login-dialog button {
+    font-family: "Poppins", serif;
+}
+
+@keyframes slide-in-login {
+    from {
+        opacity: 0;
+        transform: translateY(-150%);
+    }
+    to {
+        opacity: 1.0;
+        transform: translateY(0);
+    }
+} 
