--- a/src/static/stylesheet/login.css
+++ b/src/static/stylesheet/login.css
@@ -42,12 +42,25 @@
 }
 
 .sid-layout_login-dialog {
-    margin-top: -500px !important;
+    margin: 0; /* Entferne den oberen Rand */
     height: auto !important;
     width: 500px !important;
     animation: slide-in-login 1s;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.1), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
     border: none;
+    z-index: 1000;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.sid-layout_main-blur {
+    filter: blur(6px);
+    pointer-events: none;
+    backdrop-filter: blur(6px);
+    transition: filter 0.4s ease-in-out, backdrop-filter 0.4s ease-in-out;
 }
 
 .sid-layout_login-dialog h2 {
@@ -61,10 +74,10 @@
 @keyframes slide-in-login {
     from {
         opacity: 0;
-        transform: translateY(-150%);
+        transform: translate(-50%, -150%);
     }
     to {
         opacity: 1.0;
-        transform: translateY(0);
+        transform: translate(-50%, -50%);
     }
-} 
+}
