feat: update footer layout for login and OAuth pages to enhance structure and styling

--- a/src/static/stylesheet/footer.css
+++ b/src/static/stylesheet/footer.css
@@ -2,6 +2,12 @@
     color: white;
 }
 
+.sid-layout_footer-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .sid-layout_footer a {
     color: #ffad69;
 }
