feat: implement TOTP setup and QR code generation for account management

--- a/src/static/stylesheet/account.css
+++ b/src/static/stylesheet/account.css
@@ -107,3 +107,7 @@
     text-align: left;
     margin-left: 200px;
 }
+
+.sid-account-content-main button {
+    font-family: 'Poppins', sans-serif;
+}
