--- a/static/stylesheet/oauth.css
+++ b/static/stylesheet/oauth.css
@@ -4,7 +4,14 @@
 }
 
 .sid-layout_oauth-login input, button {
-    font-family: "Poppins", serif !important;
+  font-family: "Google Sans Flex", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings:
+      "wdth" 100,
+      "GRAD" 0,
+      "ROND" 100;
 }
 
 @keyframes slide-right {
