--- a/static/stylesheet/account.css
+++ b/static/stylesheet/account.css
@@ -109,5 +109,12 @@
 }
 
 .sid-account-content-main button {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Google Sans Flex", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings:
+      "wdth" 100,
+      "GRAD" 0,
+      "ROND" 100;
 }
